--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,233 @@
-<table class="table ">
-    <thead>
-    <tr>
-      <th scope="col" [appSort]="offersList" data-order="desc" data-name="id" class="text-center">#</th>
-      <th scope="col"  [appSort]="offersList" data-order="desc" data-name="provider" class="text-center">Provider<i class="fas fa-times"></i></th>
-      <th scope="col"  [appSort]="offersList" data-order="desc" data-name="price" class="text-center" >Pricing</th>
-      <th scope="col"  [appSort]="offersList" data-order="desc" data-name="ram" class="text-center">RAM(in Gb)</th>
-      <th scope="col"  [appSort]="offersList" data-order="desc" data-name="cpu" class="text-center">CPU(in count)</th>
-      <th scope="col"  [appSort]="offersList" data-order="desc" data-name="bandwidth" class="text-center">Bandwidth(in Gb)</th>
-      <th scope="col"  [appSort]="offersList" data-order="desc" data-name="url" class="text-center">Url</th>
-      <th scope="col"  [appSort]="offersList" data-order="desc" data-name="rating" class="text-center">Ratings</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let list of offersList">
-      <th scope="row" class="text-center">{{ list.id }}</th>
-      <td class="text-center">{{list.hprovider}} </td>
-      <td class="text-center"><b>$</b>{{list.price}}</td>
-      <td class="text-center">{{list.ram}} gb</td>
-      <td class="text-center">{{list.cpu}} vcore</td>
-      <td class="text-center">{{list.bandwidth}}</td>
-      <td class="text-center">{{list.url}}</td>
-      <td class="text-center">{{list.rating}}</td>
-    </tr>
-    </tbody>
-  </table>
-  
+
+
+ <!-- Navigation-->
+ <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+   <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav navbar-sidenav">
+
+      <li class="nav-item">
+        <a class="nav-link sidefrst" href="index.php">
+          <span class="textside">  Dashboard</span>
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link sidesecnd" href="employee.php">
+          <span class="textside">  Employee</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link sidesthrd" href="clients.php">
+          <span class="textside">  Clients</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link sidesforth" href="job.php">
+          <span class="textside">  Jobs</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link sidesfifth" href="quotation.php">
+          <span class="textside">  Quotation</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link sidesix" href="service.php">
+          <span class="textside">  Services</span>
+        </a>
+      </li>
+    </ul>
+    
+    <ul class="navbar-nav2 ml-auto">
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome WaLia</a>
+          <ul class="dropdown-menu">
+              <li class="resflset"><a href="profile.php"><i class="fa fa-fw fa-cog"></i> Edit profile</a></li>
+              <li class="divider"></li>
+              <li class="resflset"><a href="#"><i class="fa fa-fw fa-power-off"></i> Logout</a></li>
+          </ul>
+      </li>
+    </ul>
+    
+  </div>
+</nav>
+
+<div class="content-wrapper">
+  <div class="container-fluid">
+    <div class="row">
+
+    <!-- Icon Cards-->
+      <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-2 mt-4">
+          <div class="inforide">
+            <div class="row">
+              <div class="col-lg-3 col-md-4 col-sm-4 col-4 rideone">
+                  <img src="https://vignette.wikia.nocookie.net/nationstates/images/2/29/WS_Logo.png/revision/latest?cb=20080507063620">
+              </div>
+              <div class="col-lg-9 col-md-8 col-sm-8 col-8 fontsty">
+                  <h4>Employee</h4>
+                  <h2>20</h2>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-2 mt-4">
+          <div class="inforide">
+            <div class="row">
+              <div class="col-lg-3 col-md-4 col-sm-4 col-4 ridetwo">
+                  <img src="https://vignette.wikia.nocookie.net/nationstates/images/2/29/WS_Logo.png/revision/latest?cb=20080507063620">
+              </div>
+              <div class="col-lg-9 col-md-8 col-sm-8 col-8 fontsty">
+                  <h4>Clients</h4>
+                  <h2>120</h2>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-2 mt-4">
+          <div class="inforide">
+            <div class="row">
+              <div class="col-lg-3 col-md-4 col-sm-4 col-4 ridethree">
+                  <img src="https://vignette.wikia.nocookie.net/nationstates/images/2/29/WS_Logo.png/revision/latest?cb=20080507063620">
+              </div>
+              <div class="col-lg-9 col-md-8 col-sm-8 col-8 fontsty">
+                  <h4>Jobs</h4>
+                  <h2>50</h2>
+              </div>
+            </div>
+          </div>
+      </div>
+
+  </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <form [formGroup] = 'offerForm' (ngSubmit)="collectdata()">
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputHprovider">Hosting Provider</label>
+                    <input type="text" class="form-control" formControlName='hprovider' placeholder="Hosting provider">
+                  </div>
+                  <div class="form-group col-md-2">
+                    <label for="inputPricing">Pricing</label>
+                    <input type="text" class="form-control" formControlName='price' placeholder="$">
+                  </div>
+                  <div class="form-group col-md-2">
+                    <label for="inputRam">RAM</label>
+                    <select id="inputRam" class="form-control" formControlName='ram'>
+                        <option selected>Choose...</option>
+                        <option>128</option>
+                        <option>256</option>
+                        <option>512</option>
+                        <option>768</option>
+                        <option>1024</option>
+                        <option>1536</option>
+                        <option>2048</option>
+                        <option>2560</option>
+                        <option>3072</option>
+                        <option>3584</option>
+                        <option>4096</option>
+                        <option>4608</option>
+                        <option>5120</option>
+                        <option>5632</option>
+                        <option>6144</option>
+                        <option>6656</option>
+                        <option>7168</option>
+                        <option>7680</option>
+                        <option>8192</option>
+                        <option>8704</option>
+                        <option>9216</option>
+                        <option>9728</option>
+                        <option>10240</option>
+                      </select>                  
+                    </div>
+                  <div class="form-group col-md-2">
+                    <label for="inputCore">Vcore</label>
+                    <select id="inputCore" class="form-control" formControlName='vcore'>
+                        <option selected>Choose...</option>
+                        <option>0.5</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                        <option>6</option>
+                        <option>7</option>
+                        <option>8</option>
+                        <option>9</option>
+                        <option>10</option>
+                        <option>11</option>
+                        <option>12</option>
+                        <option>13</option>
+                        <option>14</option>
+                        <option>15</option>
+                        <option>16</option>
+                        <option>17</option>
+                        <option>18</option>
+                        <option>19</option>
+                        <option>20</option>
+                      </select>                   
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-2">
+                      <label for="inputBandwidth">Bandwidth</label>
+                      <select id="inputBandwidth" class="form-control" formControlName='bandwidth'>
+                        <option>0.5</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                        <option>6</option>
+                        <option>7</option>
+                        <option>8</option>
+                        <option>9</option>
+                        <option>10</option>
+                        <option>11</option>
+                        <option>12</option>
+                        <option>13</option>
+                        <option>14</option>
+                        <option>15</option>
+                        <option>16</option>
+                        <option>17</option>
+                        <option>18</option>
+                        <option>19</option>
+                        <option>20</option>
+                        </select>                  
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="inputurl">Hosting Provider</label>
+                        <input type="text" class="form-control" formControlName='url' placeholder="Place Affiliate url">
+                      </div>
+                      <div class="form-group col-md-2">
+                        <label for="inputRating">Ratings</label>
+                        <select formControlName='rating' class="form-control">
+                            <option>0.5</option>
+                            <option>1</option>
+                            <option>1.5</option>
+                            <option>2</option>
+                            <option>2.5</option>
+                            <option>3</option>
+                            <option>3.5</option>
+                            <option>4</option>
+                            <option>4.5</option>
+                            <option>5</option>
+                          </select>                  
+                        </div>
+                  </div>
+                  
+                
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+        </div>
+   
+</div>
+</div>
+</div>
+
+
+
+
